# Oni-Auction

./: .dockerignore  .env.example  .gitignore  CLAUDE.md
.claude/: settings.local.json
.claude/context/: STATUS.md  agentic-workflow.md  data-models.md  domain-glossary.md  kafka-design.md  project-overview.md
.claude/design-specs/: admin-dashboard.md  design-tokens.ts  homepage.md  live-auction-buyer.md  login.md
.claude/skills/load-tester/: SKILL.md
.claude/skills/performance-profiler/: SKILL.md
.claude/skills/playwright-pro/: SKILL.md
.claude/skills/react-native-dev/: SKILL.md
.claude/skills/realtime-architect/: SKILL.md
.claude/skills/senior-backend/: SKILL.md
frontend/react-app/: package-lock.json  package.json  vite.config.ts
infra/docker/: docker-compose.yml
infra/scripts/: create-topics.sh  init-db.sql  seed-redis.sh
k6/: bid-storm.js  concurrent-bidders.js  dutch-race.js  mixed-realistic.js  run-all.sh  ws-viewers.js
k6/helpers/: auth.js
services/auction-api/: Dockerfile  dependencies.py  main.py  requirements.txt  settings.py
services/auction-timer/: Dockerfile  redis_ops.py  scheduler.py  settings.py  soft_close.py  timer.py
services/bid-worker/: Dockerfile  db.py  processor.py  redis_client.py  requirements.txt  settings.py  worker.py
services/websocket-service/: Dockerfile  connection_manager.py  lot_state.py  main.py  requirements.txt  settings.py
shared/: pyproject.toml
shared/kafka/: __init__.py  consumer.py  producer.py  topics.py
shared/schemas/: __init__.py  auction.py  bid.py  events.py
(+99 files in other folders)
